Adding the vcxproj files, so the distribution can be compiled with Visual Studio 2015. Adding also a multithreaded perception neuron

--- a/.gitignore
+++ b/.gitignore
@@ -255,7 +255,8 @@ paket-files/
 
 **/CMakeCache.txt
 **/CMakeFiles
-**/*.vcxproj*
+# I need the projects!!
+# **/*.vcxproj*
 **/*.bak
 **/submodules
 
