Ignoring more directories in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,12 @@ paket-files/
 **/*.bak
 **/submodules
 
+# Ignore this from my particular VRPN distribution
+build/*
+libAndroid/*
+vrpnlibAndroid/*
+vrpnAndroid/*
+vrpn - Copy.sln
 
 
 
