First version with the car generator. The vrpn.cfg file at server_src has examples for the perception neuron, the car generator, and the wwa_server.
There is a .bat file in server_src that runs the server with the
appropriate arguments, and delete the log files at the beginning.

There are two small subprojects with Tim's test and a client test for
the car simulator.

--- a/server_src/wwa_server.vcxproj
+++ b/server_src/wwa_server.vcxproj
@@ -369,6 +369,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\vrpn_MxRTrafficGenerator.cpp" />
     <ClCompile Include="vrpn.C">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">CompileAsCpp</CompileAs>
