--- a/server_src/vrpn.cfg
+++ b/server_src/vrpn.cfg
@@ -1591,6 +1591,24 @@
 #3 :     pt      3      #to sensor 3 assign led 3
 #</owl>
 
+
+##############################################################################
+#Perception Neuron server.  This device type is not compiled by default, since
+#it uses a proprietary library.  However, you can get it to compile by
+#defining VRPN_INCLUDE_PERCEPTION_NEURON and including the appropriate libraries
+#and headers when compiling (See vrpn_Configure.h).
+#
+#Arguments:
+#       char	name_of_this_tracker[]   #Tracker0, Tracker1, ... etc
+#       char    location_of_PERCEPTION_device[] #typically localhost, or ip address
+#                                        It should be present even if the protocol is udp
+#       char	protocol[]   			 # tcp or udp
+#       int     port				     # port number
+
+vrpn_Tracker_PerceptionNeuron Tracker0 localhost tcp 7001
+#vrpn_Tracker_PerceptionNeuron Tracker0 172.16.171.27 tcp 8007
+#vrpn_Tracker_PerceptionNeuron Tracker0 localhost udp 8007
+
 ################################################################################
 # Generic Auxiliary Logger. This is a server that will listen for requests to
 # produce additional log files and the name of the connection it should make the
