First verion of our support for the Perception Neuron by Noitom. - You should delete vrpn_Configure.h when using CMake - This version uses the Unity-VRPNPerceptionNeuron for testing (tag v1.0) - This build depends on the Axis Neuron v3.5.24 and the Neuron Data Reader   SDK b15. you can download them at https://neuronmocap.com/downloads - To compile and run: 1. run CMake-gui CMakeLists.txt. I use a subdirectory build for that purpose. Configure the places for the Neuron libraries and the flag to support it 2. In the build directory run CMake to build and install the vrpn_server 3. run the Axis Neuron with one of the predefined files, in a loop and with no displacement nor reference in its output format settings 4. Run the vrpn_server in the installed directory. You should copy the vrpn.cfg and the NeuronDataReader.dll into that directory. It should show a line with the open port (future versions should use CMake for this) 5. Run in Uniy the client... You should see both the VRPN based avatar and the one that uses the native plugin that Noitom provides.
Enjoy!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -817,12 +817,12 @@ endif()
 ###
 # TODO Actually do a proper search for the Perception Neuron API headers and libraries
 # and not use link_directories.
-option(VRPN_INCLUDE_PERCEPTIONNEURON
+option(VRPN_INCLUDE_PERCEPTION_NEURON
 	"Build with Perception Neuron library support"
 	OFF)
 set(PERCEPTIONNEURON_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/perceptionneuron" CACHE PATH "location of Perception Neuron headers")
 set(PERCEPTIONNEURON_LIBRARY_DIR "${CMAKE_SOURCE_DIR}/perceptionneuron" CACHE PATH "location of Perception Neuron libraries (NeuronDataReader.dll, etc")
-if(VRPN_INCLUDE_PERCEPTIONNEURON)
+if(VRPN_INCLUDE_PERCEPTION_NEURON)
 	include_directories(${PERCEPTIONNEURON_INCLUDE_DIR})
 	link_directories(${PERCEPTIONNEURON_LIBRARY_DIR})
 	if(WIN32)
@@ -830,6 +830,12 @@ if(VRPN_INCLUDE_PERCEPTIONNEURON)
 	else()
 		list(APPEND SERVER_EXTRA_LIBS NeuronDataReader)
 	endif()
+
+add_custom_command(TARGET vrpn_server.exe POST_BUILD        # Adds a post-build event to MyTest
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different  # which executes "cmake - E copy_if_different..."
+        "${PERCEPTIONNEURON_LIBRARY_DIR}/NeuronDataReader.dll"      # <--this is in-file
+        $<TARGET_FILE_DIR:vrpn_server.exe>)                 # <--this is out-file path
+		
 endif()
 
 ###
@@ -1112,6 +1118,7 @@ set(VRPN_SERVER_SOURCES
 	vrpn_Tracker_OSVRHackerDevKit.C
 	vrpn_Tracker_PDI.C
 	vrpn_Tracker_PhaseSpace.C
+	vrpn_Tracker_PerceptionNeuron.cpp
 	vrpn_Tracker_RazerHydra.C
 	vrpn_Tracker_SpacePoint.C
 	vrpn_Tracker_Wintracker.C
@@ -1216,6 +1223,7 @@ set(VRPN_SERVER_PUBLIC_HEADERS
 	vrpn_Tracker_OSVRHackerDevKit.h
 	vrpn_Tracker_PDI.h
 	vrpn_Tracker_PhaseSpace.h
+	vrpn_Tracker_PerceptionNeuron.h
 	vrpn_Tracker_RazerHydra.h
 	vrpn_Tracker_SpacePoint.h
 	vrpn_Tracker_Wintracker.h
